Remove ability for user to zoom on site on mobile. Hopefully fixing strange mobile header bug.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@
     left: 0;
     top: 0;
     right: 0;
-    bottom: 0;
     background-color: #E5E5E5;
     width: 100%;
     height: 3em;
